// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpriteEditor - Snapshot Tests renders correctly when closed 1`] = `<div />`;

exports[`SpriteEditor - Snapshot Tests renders correctly when open 1`] = `
<div>
  <div
    style="position: fixed; inset: 0; z-index: 50; display: flex; align-items: center; justify-content: center; background: rgba(0, 0, 0, 0.5);"
  >
    <div
      data-testid="sprite-editor-modal"
      style="background: rgb(17, 68, 75); border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 8px; box-shadow: 0 30px 70px -20px rgba(0,0,0,0.6), 0 4px 18px rgba(0,0,0,0.3); width: 720px; max-width: 90vw; max-height: 90vh; display: flex; flex-direction: column; font-family: "Inter", system-ui, sans-serif; color: rgb(232, 242, 244);"
    >
      <div
        style="display: flex; align-items: center; gap: 12px; padding: 14px 18px; border-bottom: 1px solid rgba(148, 210, 216, 0.14);"
      >
        <div
          style="flex: 1 1 0%; font-family: "Inter", system-ui, sans-serif; font-weight: 700; font-size: 15px; color: rgb(232, 242, 244);"
        >
          Sprite Editor
        </div>
        <div
          style="display: flex; gap: 6px;"
        >
          <button
            data-testid="close-button"
            style="all: unset; cursor: pointer; width: 30px; height: 30px; border-radius: 6px; display: inline-flex; align-items: center; justify-content: center; color: rgb(155, 179, 184);"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M6 6l12 12M18 6L6 18"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        style="display: flex; gap: 0; flex: 1 1 0%; min-height: 0;"
      >
        <div
          style="width: 44px; flex: 0 0 auto; padding: 8px 4px; background: rgba(255, 255, 255, 0.06); border-right: 1px solid rgba(148, 210, 216, 0.14); display: flex; flex-direction: column; gap: 1px; align-items: center;"
        >
          <button
            data-testid="tool-select"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Select"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M5 4l14 6-6 2-2 6-6-14Z"
              />
            </svg>
          </button>
          <button
            data-testid="tool-rect"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: rgb(247, 182, 122); color: rgb(255, 255, 255); transition: background 0.1s;"
            title="Rectangle"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <rect
                height="16"
                width="16"
                x="4"
                y="4"
              />
            </svg>
          </button>
          <button
            data-testid="tool-ellipse"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Ellipse"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <circle
                cx="12"
                cy="12"
                r="8"
              />
            </svg>
          </button>
          <button
            data-testid="tool-line"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Line"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M5 19L19 5"
              />
            </svg>
          </button>
          <button
            data-testid="tool-freehand"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Pen"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M3 21l3.5-1L20 6.5 17.5 4 4 17.5 3 21Z"
              />
            </svg>
          </button>
          <button
            data-testid="tool-polygon"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Polygon"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M12 3l9 6-3.5 11h-11L3 9l9-6Z"
              />
            </svg>
          </button>
          <button
            data-testid="tool-text"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Text"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M5 6V4h14v2M12 4v16M9 20h6"
              />
            </svg>
          </button>
          <div
            style="height: 1px; background: rgba(148, 210, 216, 0.14); margin: 6px 0px; width: 28px;"
          />
          <button
            data-testid="undo-button"
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); opacity: 0.3;"
            title="Undo"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M9 14L4 9l5-5M4 9h11a5 5 0 0 1 0 10h-3"
              />
            </svg>
          </button>
          <button
            data-testid="redo-button"
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); opacity: 0.3;"
            title="Redo"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M15 14l5-5-5-5M20 9H9a5 5 0 0 0 0 10h3"
              />
            </svg>
          </button>
          <div
            style="height: 1px; background: rgba(148, 210, 216, 0.14); margin: 6px 0px; width: 28px;"
          />
          <button
            data-testid="delete-button"
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(255, 139, 139); opacity: 0.3;"
            title="Delete selected"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M4 7h16M9 7V5.5A2.5 2.5 0 0 1 11.5 3h1A2.5 2.5 0 0 1 15 5.5V7M6.5 7l.9 12.1A2.5 2.5 0 0 0 9.9 21.5h4.2a2.5 2.5 0 0 0 2.5-2.4L17.5 7"
              />
            </svg>
          </button>
        </div>
        <div
          data-testid="sprite-editor-content"
          style="flex: 1 1 0%; min-width: 0; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 24px; gap: 10px;"
        >
          <div>
            <div
              style="width: 320px; height: 320px; background: rgb(255, 255, 255); border-radius: 3px; box-shadow: 0 0 0 1px rgba(148,210,216,0.14), 0 24px 50px -22px rgba(0,0,0,0.30); overflow: hidden; cursor: crosshair;"
            >
              <div
                data-testid="sprite-canvas"
                height="320"
                tabindex="0"
                width="320"
              >
                <div>
                  <div />
                  <div
                    points="152,160,168,160"
                    stroke="#22d3ee"
                    stroke-width="1"
                  />
                  <div
                    points="160,152,160,168"
                    stroke="#22d3ee"
                    stroke-width="1"
                  />
                  <div
                    fill="transparent"
                    radius="3"
                    stroke="#22d3ee"
                    stroke-width="1"
                    x="160"
                    y="160"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            style="display: flex; align-items: center; gap: 16px; font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(155, 179, 184);"
          >
            <span>
              tool: 
              <span
                style="color: rgb(232, 242, 244); font-weight: 500;"
              >
                rect
              </span>
            </span>
            <span>
              x: 
              <span
                style="color: rgb(232, 242, 244);"
              >
                0
              </span>
            </span>
            <span>
              y: 
              <span
                style="color: rgb(232, 242, 244);"
              >
                0
              </span>
            </span>
            <span>
              scale: 
              <span
                style="color: rgb(232, 242, 244);"
              >
                5
                ×
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        style="display: flex; align-items: center; gap: 12px; padding: 10px 18px; background: rgba(255, 255, 255, 0.06); border-top: 1px solid rgba(148, 210, 216, 0.14);"
      >
        <div
          style="position: relative;"
        >
          <button
            data-testid="fill-color-button"
            style="all: unset; cursor: pointer; height: 30px; padding: 0px 12px; display: inline-flex; align-items: center; gap: 8px; background: transparent; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 5px; font-size: 12px; font-weight: 500; color: rgb(232, 242, 244); text-transform: uppercase; letter-spacing: 0.4px;"
            type="button"
          >
            <span>
              Fill
            </span>
            <span
              style="width: 18px; height: 18px; border-radius: 2px; background: rgb(74, 222, 128); box-shadow: inset 0 0 0 1px rgba(0,0,0,0.2);"
            />
          </button>
        </div>
        <div
          style="position: relative;"
        >
          <button
            data-testid="stroke-color-button"
            style="all: unset; cursor: pointer; height: 30px; padding: 0px 12px; display: inline-flex; align-items: center; gap: 8px; background: transparent; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 5px; font-size: 12px; font-weight: 500; color: rgb(232, 242, 244); text-transform: uppercase; letter-spacing: 0.4px;"
            type="button"
          >
            <span>
              Stroke
            </span>
            <span
              style="width: 18px; height: 18px; border-radius: 2px; background: rgb(30, 41, 59); box-shadow: inset 0 0 0 1px rgba(0,0,0,0.2);"
            />
          </button>
        </div>
        <div
          style="width: 1px; height: 24px; background: rgba(148, 210, 216, 0.14);"
        />
        <span
          style="font-size: 11.5px; color: rgb(155, 179, 184); text-transform: uppercase; letter-spacing: 0.6px;"
        >
          Width
        </span>
        <input
          data-testid="stroke-width-input"
          max="8"
          min="0"
          step="1"
          style="width: 100px; accent-color: #f7b67a;"
          type="range"
          value="1"
        />
        <span
          style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 12px; color: rgb(232, 242, 244); min-width: 24px; text-align: right;"
        >
          1
          px
        </span>
        <div
          style="flex: 1 1 0%;"
        />
        <div
          style="display: inline-flex; align-items: center; gap: 6px; padding: 0px 10px; height: 30px; background: rgb(17, 68, 75); border-radius: 5px; border: 1px solid rgba(148, 210, 216, 0.14);"
        >
          <span
            style="font-size: 11px; color: rgb(155, 179, 184);"
          >
            name
          </span>
          <input
            data-testid="sprite-name-input"
            style="all: unset; width: 80px; font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 12.5px; color: rgb(232, 242, 244);"
            value="sprite"
          />
          <span
            style="font-size: 11px; color: rgb(155, 179, 184);"
          >
            .svg
          </span>
        </div>
        <button
          data-testid="save-svg-button"
          style="all: unset; cursor: pointer; padding: 7px 16px; background: rgb(126, 211, 164); color: rgb(6, 42, 38); border-radius: 5px; font-family: "Inter", system-ui, sans-serif; font-weight: 600; font-size: 12.5px; display: inline-flex; align-items: center; gap: 6px;"
          type="button"
        >
          <svg
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.8"
            viewBox="0 0 24 24"
            width="14"
          >
            <path
              d="M5 13l4 4L19 7"
            />
          </svg>
          Save
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`SpriteEditor - Snapshot Tests renders with custom size 128 1`] = `
<DocumentFragment>
  <div
    style="position: fixed; inset: 0; z-index: 50; display: flex; align-items: center; justify-content: center; background: rgba(0, 0, 0, 0.5);"
  >
    <div
      data-testid="sprite-editor-modal"
      style="background: rgb(17, 68, 75); border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 8px; box-shadow: 0 30px 70px -20px rgba(0,0,0,0.6), 0 4px 18px rgba(0,0,0,0.3); width: 720px; max-width: 90vw; max-height: 90vh; display: flex; flex-direction: column; font-family: "Inter", system-ui, sans-serif; color: rgb(232, 242, 244);"
    >
      <div
        style="display: flex; align-items: center; gap: 12px; padding: 14px 18px; border-bottom: 1px solid rgba(148, 210, 216, 0.14);"
      >
        <div
          style="flex: 1 1 0%; font-family: "Inter", system-ui, sans-serif; font-weight: 700; font-size: 15px; color: rgb(232, 242, 244);"
        >
          Sprite Editor
        </div>
        <div
          style="display: flex; gap: 6px;"
        >
          <button
            data-testid="close-button"
            style="all: unset; cursor: pointer; width: 30px; height: 30px; border-radius: 6px; display: inline-flex; align-items: center; justify-content: center; color: rgb(155, 179, 184);"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M6 6l12 12M18 6L6 18"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        style="display: flex; gap: 0; flex: 1 1 0%; min-height: 0;"
      >
        <div
          style="width: 44px; flex: 0 0 auto; padding: 8px 4px; background: rgba(255, 255, 255, 0.06); border-right: 1px solid rgba(148, 210, 216, 0.14); display: flex; flex-direction: column; gap: 1px; align-items: center;"
        >
          <button
            data-testid="tool-select"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Select"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M5 4l14 6-6 2-2 6-6-14Z"
              />
            </svg>
          </button>
          <button
            data-testid="tool-rect"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: rgb(247, 182, 122); color: rgb(255, 255, 255); transition: background 0.1s;"
            title="Rectangle"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <rect
                height="16"
                width="16"
                x="4"
                y="4"
              />
            </svg>
          </button>
          <button
            data-testid="tool-ellipse"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Ellipse"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <circle
                cx="12"
                cy="12"
                r="8"
              />
            </svg>
          </button>
          <button
            data-testid="tool-line"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Line"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M5 19L19 5"
              />
            </svg>
          </button>
          <button
            data-testid="tool-freehand"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Pen"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M3 21l3.5-1L20 6.5 17.5 4 4 17.5 3 21Z"
              />
            </svg>
          </button>
          <button
            data-testid="tool-polygon"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Polygon"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M12 3l9 6-3.5 11h-11L3 9l9-6Z"
              />
            </svg>
          </button>
          <button
            data-testid="tool-text"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Text"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M5 6V4h14v2M12 4v16M9 20h6"
              />
            </svg>
          </button>
          <div
            style="height: 1px; background: rgba(148, 210, 216, 0.14); margin: 6px 0px; width: 28px;"
          />
          <button
            data-testid="undo-button"
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); opacity: 0.3;"
            title="Undo"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M9 14L4 9l5-5M4 9h11a5 5 0 0 1 0 10h-3"
              />
            </svg>
          </button>
          <button
            data-testid="redo-button"
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); opacity: 0.3;"
            title="Redo"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M15 14l5-5-5-5M20 9H9a5 5 0 0 0 0 10h3"
              />
            </svg>
          </button>
          <div
            style="height: 1px; background: rgba(148, 210, 216, 0.14); margin: 6px 0px; width: 28px;"
          />
          <button
            data-testid="delete-button"
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(255, 139, 139); opacity: 0.3;"
            title="Delete selected"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M4 7h16M9 7V5.5A2.5 2.5 0 0 1 11.5 3h1A2.5 2.5 0 0 1 15 5.5V7M6.5 7l.9 12.1A2.5 2.5 0 0 0 9.9 21.5h4.2a2.5 2.5 0 0 0 2.5-2.4L17.5 7"
              />
            </svg>
          </button>
        </div>
        <div
          data-testid="sprite-editor-content"
          style="flex: 1 1 0%; min-width: 0; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 24px; gap: 10px;"
        >
          <div>
            <div
              style="width: 384px; height: 384px; background: rgb(255, 255, 255); border-radius: 3px; box-shadow: 0 0 0 1px rgba(148,210,216,0.14), 0 24px 50px -22px rgba(0,0,0,0.30); overflow: hidden; cursor: crosshair;"
            >
              <div
                data-testid="sprite-canvas"
                height="384"
                tabindex="0"
                width="384"
              >
                <div>
                  <div />
                  <div
                    points="184,192,200,192"
                    stroke="#22d3ee"
                    stroke-width="1"
                  />
                  <div
                    points="192,184,192,200"
                    stroke="#22d3ee"
                    stroke-width="1"
                  />
                  <div
                    fill="transparent"
                    radius="3"
                    stroke="#22d3ee"
                    stroke-width="1"
                    x="192"
                    y="192"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            style="display: flex; align-items: center; gap: 16px; font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(155, 179, 184);"
          >
            <span>
              tool: 
              <span
                style="color: rgb(232, 242, 244); font-weight: 500;"
              >
                rect
              </span>
            </span>
            <span>
              x: 
              <span
                style="color: rgb(232, 242, 244);"
              >
                0
              </span>
            </span>
            <span>
              y: 
              <span
                style="color: rgb(232, 242, 244);"
              >
                0
              </span>
            </span>
            <span>
              scale: 
              <span
                style="color: rgb(232, 242, 244);"
              >
                3×
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        style="display: flex; align-items: center; gap: 12px; padding: 10px 18px; background: rgba(255, 255, 255, 0.06); border-top: 1px solid rgba(148, 210, 216, 0.14);"
      >
        <div
          style="position: relative;"
        >
          <button
            data-testid="fill-color-button"
            style="all: unset; cursor: pointer; height: 30px; padding: 0px 12px; display: inline-flex; align-items: center; gap: 8px; background: transparent; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 5px; font-size: 12px; font-weight: 500; color: rgb(232, 242, 244); text-transform: uppercase; letter-spacing: 0.4px;"
            type="button"
          >
            <span>
              Fill
            </span>
            <span
              style="width: 18px; height: 18px; border-radius: 2px; background: rgb(74, 222, 128); box-shadow: inset 0 0 0 1px rgba(0,0,0,0.2);"
            />
          </button>
        </div>
        <div
          style="position: relative;"
        >
          <button
            data-testid="stroke-color-button"
            style="all: unset; cursor: pointer; height: 30px; padding: 0px 12px; display: inline-flex; align-items: center; gap: 8px; background: transparent; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 5px; font-size: 12px; font-weight: 500; color: rgb(232, 242, 244); text-transform: uppercase; letter-spacing: 0.4px;"
            type="button"
          >
            <span>
              Stroke
            </span>
            <span
              style="width: 18px; height: 18px; border-radius: 2px; background: rgb(30, 41, 59); box-shadow: inset 0 0 0 1px rgba(0,0,0,0.2);"
            />
          </button>
        </div>
        <div
          style="width: 1px; height: 24px; background: rgba(148, 210, 216, 0.14);"
        />
        <span
          style="font-size: 11.5px; color: rgb(155, 179, 184); text-transform: uppercase; letter-spacing: 0.6px;"
        >
          Width
        </span>
        <input
          data-testid="stroke-width-input"
          max="8"
          min="0"
          step="1"
          style="width: 100px; accent-color: #f7b67a;"
          type="range"
          value="1"
        />
        <span
          style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 12px; color: rgb(232, 242, 244); min-width: 24px; text-align: right;"
        >
          1px
        </span>
        <div
          style="flex: 1 1 0%;"
        />
        <div
          style="display: inline-flex; align-items: center; gap: 6px; padding: 0px 10px; height: 30px; background: rgb(17, 68, 75); border-radius: 5px; border: 1px solid rgba(148, 210, 216, 0.14);"
        >
          <span
            style="font-size: 11px; color: rgb(155, 179, 184);"
          >
            name
          </span>
          <input
            data-testid="sprite-name-input"
            style="all: unset; width: 80px; font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 12.5px; color: rgb(232, 242, 244);"
            value="sprite"
          />
          <span
            style="font-size: 11px; color: rgb(155, 179, 184);"
          >
            .svg
          </span>
        </div>
        <button
          data-testid="save-svg-button"
          style="all: unset; cursor: pointer; padding: 7px 16px; background: rgb(126, 211, 164); color: rgb(6, 42, 38); border-radius: 5px; font-family: "Inter", system-ui, sans-serif; font-weight: 600; font-size: 12.5px; display: inline-flex; align-items: center; gap: 6px;"
          type="button"
        >
          <svg
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.8"
            viewBox="0 0 24 24"
            width="14"
          >
            <path
              d="M5 13l4 4L19 7"
            />
          </svg>
          Save
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SpriteEditor - Snapshot Tests renders with default props 1`] = `
<DocumentFragment>
  <div
    style="position: fixed; inset: 0; z-index: 50; display: flex; align-items: center; justify-content: center; background: rgba(0, 0, 0, 0.5);"
  >
    <div
      data-testid="sprite-editor-modal"
      style="background: rgb(17, 68, 75); border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 8px; box-shadow: 0 30px 70px -20px rgba(0,0,0,0.6), 0 4px 18px rgba(0,0,0,0.3); width: 720px; max-width: 90vw; max-height: 90vh; display: flex; flex-direction: column; font-family: "Inter", system-ui, sans-serif; color: rgb(232, 242, 244);"
    >
      <div
        style="display: flex; align-items: center; gap: 12px; padding: 14px 18px; border-bottom: 1px solid rgba(148, 210, 216, 0.14);"
      >
        <div
          style="flex: 1 1 0%; font-family: "Inter", system-ui, sans-serif; font-weight: 700; font-size: 15px; color: rgb(232, 242, 244);"
        >
          Sprite Editor
        </div>
        <div
          style="display: flex; gap: 6px;"
        >
          <button
            data-testid="close-button"
            style="all: unset; cursor: pointer; width: 30px; height: 30px; border-radius: 6px; display: inline-flex; align-items: center; justify-content: center; color: rgb(155, 179, 184);"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M6 6l12 12M18 6L6 18"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        style="display: flex; gap: 0; flex: 1 1 0%; min-height: 0;"
      >
        <div
          style="width: 44px; flex: 0 0 auto; padding: 8px 4px; background: rgba(255, 255, 255, 0.06); border-right: 1px solid rgba(148, 210, 216, 0.14); display: flex; flex-direction: column; gap: 1px; align-items: center;"
        >
          <button
            data-testid="tool-select"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Select"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M5 4l14 6-6 2-2 6-6-14Z"
              />
            </svg>
          </button>
          <button
            data-testid="tool-rect"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: rgb(247, 182, 122); color: rgb(255, 255, 255); transition: background 0.1s;"
            title="Rectangle"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <rect
                height="16"
                width="16"
                x="4"
                y="4"
              />
            </svg>
          </button>
          <button
            data-testid="tool-ellipse"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Ellipse"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <circle
                cx="12"
                cy="12"
                r="8"
              />
            </svg>
          </button>
          <button
            data-testid="tool-line"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Line"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M5 19L19 5"
              />
            </svg>
          </button>
          <button
            data-testid="tool-freehand"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Pen"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M3 21l3.5-1L20 6.5 17.5 4 4 17.5 3 21Z"
              />
            </svg>
          </button>
          <button
            data-testid="tool-polygon"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Polygon"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M12 3l9 6-3.5 11h-11L3 9l9-6Z"
              />
            </svg>
          </button>
          <button
            data-testid="tool-text"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Text"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M5 6V4h14v2M12 4v16M9 20h6"
              />
            </svg>
          </button>
          <div
            style="height: 1px; background: rgba(148, 210, 216, 0.14); margin: 6px 0px; width: 28px;"
          />
          <button
            data-testid="undo-button"
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); opacity: 0.3;"
            title="Undo"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M9 14L4 9l5-5M4 9h11a5 5 0 0 1 0 10h-3"
              />
            </svg>
          </button>
          <button
            data-testid="redo-button"
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); opacity: 0.3;"
            title="Redo"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M15 14l5-5-5-5M20 9H9a5 5 0 0 0 0 10h3"
              />
            </svg>
          </button>
          <div
            style="height: 1px; background: rgba(148, 210, 216, 0.14); margin: 6px 0px; width: 28px;"
          />
          <button
            data-testid="delete-button"
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(255, 139, 139); opacity: 0.3;"
            title="Delete selected"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M4 7h16M9 7V5.5A2.5 2.5 0 0 1 11.5 3h1A2.5 2.5 0 0 1 15 5.5V7M6.5 7l.9 12.1A2.5 2.5 0 0 0 9.9 21.5h4.2a2.5 2.5 0 0 0 2.5-2.4L17.5 7"
              />
            </svg>
          </button>
        </div>
        <div
          data-testid="sprite-editor-content"
          style="flex: 1 1 0%; min-width: 0; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 24px; gap: 10px;"
        >
          <div>
            <div
              style="width: 320px; height: 320px; background: rgb(255, 255, 255); border-radius: 3px; box-shadow: 0 0 0 1px rgba(148,210,216,0.14), 0 24px 50px -22px rgba(0,0,0,0.30); overflow: hidden; cursor: crosshair;"
            >
              <div
                data-testid="sprite-canvas"
                height="320"
                tabindex="0"
                width="320"
              >
                <div>
                  <div />
                  <div
                    points="152,160,168,160"
                    stroke="#22d3ee"
                    stroke-width="1"
                  />
                  <div
                    points="160,152,160,168"
                    stroke="#22d3ee"
                    stroke-width="1"
                  />
                  <div
                    fill="transparent"
                    radius="3"
                    stroke="#22d3ee"
                    stroke-width="1"
                    x="160"
                    y="160"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            style="display: flex; align-items: center; gap: 16px; font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(155, 179, 184);"
          >
            <span>
              tool: 
              <span
                style="color: rgb(232, 242, 244); font-weight: 500;"
              >
                rect
              </span>
            </span>
            <span>
              x: 
              <span
                style="color: rgb(232, 242, 244);"
              >
                0
              </span>
            </span>
            <span>
              y: 
              <span
                style="color: rgb(232, 242, 244);"
              >
                0
              </span>
            </span>
            <span>
              scale: 
              <span
                style="color: rgb(232, 242, 244);"
              >
                5×
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        style="display: flex; align-items: center; gap: 12px; padding: 10px 18px; background: rgba(255, 255, 255, 0.06); border-top: 1px solid rgba(148, 210, 216, 0.14);"
      >
        <div
          style="position: relative;"
        >
          <button
            data-testid="fill-color-button"
            style="all: unset; cursor: pointer; height: 30px; padding: 0px 12px; display: inline-flex; align-items: center; gap: 8px; background: transparent; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 5px; font-size: 12px; font-weight: 500; color: rgb(232, 242, 244); text-transform: uppercase; letter-spacing: 0.4px;"
            type="button"
          >
            <span>
              Fill
            </span>
            <span
              style="width: 18px; height: 18px; border-radius: 2px; background: rgb(74, 222, 128); box-shadow: inset 0 0 0 1px rgba(0,0,0,0.2);"
            />
          </button>
        </div>
        <div
          style="position: relative;"
        >
          <button
            data-testid="stroke-color-button"
            style="all: unset; cursor: pointer; height: 30px; padding: 0px 12px; display: inline-flex; align-items: center; gap: 8px; background: transparent; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 5px; font-size: 12px; font-weight: 500; color: rgb(232, 242, 244); text-transform: uppercase; letter-spacing: 0.4px;"
            type="button"
          >
            <span>
              Stroke
            </span>
            <span
              style="width: 18px; height: 18px; border-radius: 2px; background: rgb(30, 41, 59); box-shadow: inset 0 0 0 1px rgba(0,0,0,0.2);"
            />
          </button>
        </div>
        <div
          style="width: 1px; height: 24px; background: rgba(148, 210, 216, 0.14);"
        />
        <span
          style="font-size: 11.5px; color: rgb(155, 179, 184); text-transform: uppercase; letter-spacing: 0.6px;"
        >
          Width
        </span>
        <input
          data-testid="stroke-width-input"
          max="8"
          min="0"
          step="1"
          style="width: 100px; accent-color: #f7b67a;"
          type="range"
          value="1"
        />
        <span
          style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 12px; color: rgb(232, 242, 244); min-width: 24px; text-align: right;"
        >
          1px
        </span>
        <div
          style="flex: 1 1 0%;"
        />
        <div
          style="display: inline-flex; align-items: center; gap: 6px; padding: 0px 10px; height: 30px; background: rgb(17, 68, 75); border-radius: 5px; border: 1px solid rgba(148, 210, 216, 0.14);"
        >
          <span
            style="font-size: 11px; color: rgb(155, 179, 184);"
          >
            name
          </span>
          <input
            data-testid="sprite-name-input"
            style="all: unset; width: 80px; font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 12.5px; color: rgb(232, 242, 244);"
            value="sprite"
          />
          <span
            style="font-size: 11px; color: rgb(155, 179, 184);"
          >
            .svg
          </span>
        </div>
        <button
          data-testid="save-svg-button"
          style="all: unset; cursor: pointer; padding: 7px 16px; background: rgb(126, 211, 164); color: rgb(6, 42, 38); border-radius: 5px; font-family: "Inter", system-ui, sans-serif; font-weight: 600; font-size: 12.5px; display: inline-flex; align-items: center; gap: 6px;"
          type="button"
        >
          <svg
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.8"
            viewBox="0 0 24 24"
            width="14"
          >
            <path
              d="M5 13l4 4L19 7"
            />
          </svg>
          Save
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SpriteEditor - Snapshot Tests renders with initial name 1`] = `
<DocumentFragment>
  <div
    style="position: fixed; inset: 0; z-index: 50; display: flex; align-items: center; justify-content: center; background: rgba(0, 0, 0, 0.5);"
  >
    <div
      data-testid="sprite-editor-modal"
      style="background: rgb(17, 68, 75); border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 8px; box-shadow: 0 30px 70px -20px rgba(0,0,0,0.6), 0 4px 18px rgba(0,0,0,0.3); width: 720px; max-width: 90vw; max-height: 90vh; display: flex; flex-direction: column; font-family: "Inter", system-ui, sans-serif; color: rgb(232, 242, 244);"
    >
      <div
        style="display: flex; align-items: center; gap: 12px; padding: 14px 18px; border-bottom: 1px solid rgba(148, 210, 216, 0.14);"
      >
        <div
          style="flex: 1 1 0%; font-family: "Inter", system-ui, sans-serif; font-weight: 700; font-size: 15px; color: rgb(232, 242, 244);"
        >
          Sprite Editor
        </div>
        <div
          style="display: flex; gap: 6px;"
        >
          <button
            data-testid="close-button"
            style="all: unset; cursor: pointer; width: 30px; height: 30px; border-radius: 6px; display: inline-flex; align-items: center; justify-content: center; color: rgb(155, 179, 184);"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M6 6l12 12M18 6L6 18"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        style="display: flex; gap: 0; flex: 1 1 0%; min-height: 0;"
      >
        <div
          style="width: 44px; flex: 0 0 auto; padding: 8px 4px; background: rgba(255, 255, 255, 0.06); border-right: 1px solid rgba(148, 210, 216, 0.14); display: flex; flex-direction: column; gap: 1px; align-items: center;"
        >
          <button
            data-testid="tool-select"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Select"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M5 4l14 6-6 2-2 6-6-14Z"
              />
            </svg>
          </button>
          <button
            data-testid="tool-rect"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: rgb(247, 182, 122); color: rgb(255, 255, 255); transition: background 0.1s;"
            title="Rectangle"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <rect
                height="16"
                width="16"
                x="4"
                y="4"
              />
            </svg>
          </button>
          <button
            data-testid="tool-ellipse"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Ellipse"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <circle
                cx="12"
                cy="12"
                r="8"
              />
            </svg>
          </button>
          <button
            data-testid="tool-line"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Line"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M5 19L19 5"
              />
            </svg>
          </button>
          <button
            data-testid="tool-freehand"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Pen"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M3 21l3.5-1L20 6.5 17.5 4 4 17.5 3 21Z"
              />
            </svg>
          </button>
          <button
            data-testid="tool-polygon"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Polygon"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M12 3l9 6-3.5 11h-11L3 9l9-6Z"
              />
            </svg>
          </button>
          <button
            data-testid="tool-text"
            style="all: unset; cursor: pointer; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); transition: background 0.1s;"
            title="Text"
            type="button"
          >
            <svg
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="17"
            >
              <path
                d="M5 6V4h14v2M12 4v16M9 20h6"
              />
            </svg>
          </button>
          <div
            style="height: 1px; background: rgba(148, 210, 216, 0.14); margin: 6px 0px; width: 28px;"
          />
          <button
            data-testid="undo-button"
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); opacity: 0.3;"
            title="Undo"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M9 14L4 9l5-5M4 9h11a5 5 0 0 1 0 10h-3"
              />
            </svg>
          </button>
          <button
            data-testid="redo-button"
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(232, 242, 244); opacity: 0.3;"
            title="Redo"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M15 14l5-5-5-5M20 9H9a5 5 0 0 0 0 10h3"
              />
            </svg>
          </button>
          <div
            style="height: 1px; background: rgba(148, 210, 216, 0.14); margin: 6px 0px; width: 28px;"
          />
          <button
            data-testid="delete-button"
            disabled=""
            style="all: unset; cursor: default; width: 34px; height: 34px; border-radius: 5px; display: inline-flex; align-items: center; justify-content: center; background: transparent; color: rgb(255, 139, 139); opacity: 0.3;"
            title="Delete selected"
            type="button"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.8"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M4 7h16M9 7V5.5A2.5 2.5 0 0 1 11.5 3h1A2.5 2.5 0 0 1 15 5.5V7M6.5 7l.9 12.1A2.5 2.5 0 0 0 9.9 21.5h4.2a2.5 2.5 0 0 0 2.5-2.4L17.5 7"
              />
            </svg>
          </button>
        </div>
        <div
          data-testid="sprite-editor-content"
          style="flex: 1 1 0%; min-width: 0; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 24px; gap: 10px;"
        >
          <div>
            <div
              style="width: 320px; height: 320px; background: rgb(255, 255, 255); border-radius: 3px; box-shadow: 0 0 0 1px rgba(148,210,216,0.14), 0 24px 50px -22px rgba(0,0,0,0.30); overflow: hidden; cursor: crosshair;"
            >
              <div
                data-testid="sprite-canvas"
                height="320"
                tabindex="0"
                width="320"
              >
                <div>
                  <div />
                  <div
                    points="152,160,168,160"
                    stroke="#22d3ee"
                    stroke-width="1"
                  />
                  <div
                    points="160,152,160,168"
                    stroke="#22d3ee"
                    stroke-width="1"
                  />
                  <div
                    fill="transparent"
                    radius="3"
                    stroke="#22d3ee"
                    stroke-width="1"
                    x="160"
                    y="160"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            style="display: flex; align-items: center; gap: 16px; font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 11px; color: rgb(155, 179, 184);"
          >
            <span>
              tool: 
              <span
                style="color: rgb(232, 242, 244); font-weight: 500;"
              >
                rect
              </span>
            </span>
            <span>
              x: 
              <span
                style="color: rgb(232, 242, 244);"
              >
                0
              </span>
            </span>
            <span>
              y: 
              <span
                style="color: rgb(232, 242, 244);"
              >
                0
              </span>
            </span>
            <span>
              scale: 
              <span
                style="color: rgb(232, 242, 244);"
              >
                5×
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        style="display: flex; align-items: center; gap: 12px; padding: 10px 18px; background: rgba(255, 255, 255, 0.06); border-top: 1px solid rgba(148, 210, 216, 0.14);"
      >
        <div
          style="position: relative;"
        >
          <button
            data-testid="fill-color-button"
            style="all: unset; cursor: pointer; height: 30px; padding: 0px 12px; display: inline-flex; align-items: center; gap: 8px; background: transparent; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 5px; font-size: 12px; font-weight: 500; color: rgb(232, 242, 244); text-transform: uppercase; letter-spacing: 0.4px;"
            type="button"
          >
            <span>
              Fill
            </span>
            <span
              style="width: 18px; height: 18px; border-radius: 2px; background: rgb(74, 222, 128); box-shadow: inset 0 0 0 1px rgba(0,0,0,0.2);"
            />
          </button>
        </div>
        <div
          style="position: relative;"
        >
          <button
            data-testid="stroke-color-button"
            style="all: unset; cursor: pointer; height: 30px; padding: 0px 12px; display: inline-flex; align-items: center; gap: 8px; background: transparent; border: 1px solid rgba(148, 210, 216, 0.14); border-radius: 5px; font-size: 12px; font-weight: 500; color: rgb(232, 242, 244); text-transform: uppercase; letter-spacing: 0.4px;"
            type="button"
          >
            <span>
              Stroke
            </span>
            <span
              style="width: 18px; height: 18px; border-radius: 2px; background: rgb(30, 41, 59); box-shadow: inset 0 0 0 1px rgba(0,0,0,0.2);"
            />
          </button>
        </div>
        <div
          style="width: 1px; height: 24px; background: rgba(148, 210, 216, 0.14);"
        />
        <span
          style="font-size: 11.5px; color: rgb(155, 179, 184); text-transform: uppercase; letter-spacing: 0.6px;"
        >
          Width
        </span>
        <input
          data-testid="stroke-width-input"
          max="8"
          min="0"
          step="1"
          style="width: 100px; accent-color: #f7b67a;"
          type="range"
          value="1"
        />
        <span
          style="font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 12px; color: rgb(232, 242, 244); min-width: 24px; text-align: right;"
        >
          1px
        </span>
        <div
          style="flex: 1 1 0%;"
        />
        <div
          style="display: inline-flex; align-items: center; gap: 6px; padding: 0px 10px; height: 30px; background: rgb(17, 68, 75); border-radius: 5px; border: 1px solid rgba(148, 210, 216, 0.14);"
        >
          <span
            style="font-size: 11px; color: rgb(155, 179, 184);"
          >
            name
          </span>
          <input
            data-testid="sprite-name-input"
            style="all: unset; width: 80px; font-family: "JetBrains Mono", ui-monospace, monospace; font-size: 12.5px; color: rgb(232, 242, 244);"
            value="mySprite"
          />
          <span
            style="font-size: 11px; color: rgb(155, 179, 184);"
          >
            .svg
          </span>
        </div>
        <button
          data-testid="save-svg-button"
          style="all: unset; cursor: pointer; padding: 7px 16px; background: rgb(126, 211, 164); color: rgb(6, 42, 38); border-radius: 5px; font-family: "Inter", system-ui, sans-serif; font-weight: 600; font-size: 12.5px; display: inline-flex; align-items: center; gap: 6px;"
          type="button"
        >
          <svg
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.8"
            viewBox="0 0 24 24"
            width="14"
          >
            <path
              d="M5 13l4 4L19 7"
            />
          </svg>
          Save
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
